[package]
name = "hello-ios"
version = "0.1.0"
description = "a hello-ios app"
edition = "2021"
rust-version = "1.67.0"

[package.metadata.bundle]
identifier = "com.ctrldlahr.dev"
resources = ["assets/", "static/"]
icon = ["static/icon.png"]

# icon = [
#   "icons/32x32.png",
#   "icons/128x128.png",
#   "icons/128x128@2x.png",
#   "icons/icon.icns",
#   "icons/icon.ico"
# ]

[dependencies]
bevy = "0.9.1"
image = "0.24.5"
winit = "0.27.5"